@@ -11,11 +11,11 @@ import ru.practicum.shareit.exception.ForbiddenException;
 import ru.practicum.shareit.exception.NotFoundException;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.ItemDtoUpdate;
-import ru.practicum.shareit.item.model.ItemEntity;
+import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.repository.CommentRepository;
 import ru.practicum.shareit.item.repository.ItemRepository;
 import ru.practicum.shareit.user.UserRepository;
-import ru.practicum.shareit.user.model.UserEntity;
+import ru.practicum.shareit.user.model.User;
 
 import java.util.Collections;
 import java.util.List;
@@ -44,8 +44,8 @@ public class ItemServiceTest {
 
     @Test
     public void getItemById() {
-        Optional<ItemEntity> item = Optional.of(ItemEntity.builder().id(1L).name("name").description("desc")
-                .userEntity(UserEntity.builder().id(3L).build()).build());
+        Optional<Item> item = Optional.of(Item.builder().id(1L).name("name").description("desc")
+                .user(User.builder().id(3L).build()).build());
         when(itemRepository.findById(Mockito.anyLong())).thenReturn(item);
         ItemDto retrievedItem = itemService.getItemById(1L, 1L);
         assertNotNull(retrievedItem);
@@ -56,12 +56,12 @@ public class ItemServiceTest {
 
     @Test
     public void findAllByUserId() {
-        Optional<UserEntity> user = Optional.of(UserEntity.builder().id(1L).name("name").build());
+        Optional<User> user = Optional.of(User.builder().id(1L).name("name").build());
         when(userRepository.findById(Mockito.anyLong())).thenReturn(user);
-        List<ItemEntity> items = List.of(ItemEntity.builder().id(3L).name("name1").build(),
-                ItemEntity.builder().id(5L).name("name2").build());
-        when(itemRepository.findByUserEntityId(user.get().getId())).thenReturn(items);
-        when(bookingRepository.findByItemEntityId(Mockito.anyLong())).thenReturn(Collections.emptyList());
+        List<Item> items = List.of(Item.builder().id(3L).name("name1").build(),
+                Item.builder().id(5L).name("name2").build());
+        when(itemRepository.findByUserEntityIdOrderByIdAsc(user.get().getId())).thenReturn(items);
+        when(bookingRepository.findByItemIdOrderByStartTimeDesc(Mockito.anyLong())).thenReturn(Collections.emptyList());
         List<ItemDto> retrievedItems = itemService.findAllByUserId(1L);
         assertNotNull(retrievedItems);
         assertEquals(2, retrievedItems.size());
@@ -74,11 +74,11 @@ public class ItemServiceTest {
 
     @Test
     public void addItem_givenValidItem_thenSucceed() {
-        Optional<UserEntity> user = Optional.of(UserEntity.builder().id(1L).build());
+        Optional<User> user = Optional.of(User.builder().id(1L).build());
         when(userRepository.findById(Mockito.anyLong())).thenReturn(user);
-        ItemEntity item = ItemEntity.builder().id(7L).name("name").build();
+        Item item = Item.builder().id(7L).name("name").build();
         ItemDto itemDto = ItemDto.builder().id(7L).name("name").build();
-        when(itemRepository.save(Mockito.any(ItemEntity.class))).thenReturn(item);
+        when(itemRepository.save(Mockito.any(Item.class))).thenReturn(item);
         ItemDto retrievedItem = itemService.addItem(Mockito.anyLong(), itemDto);
         assertNotNull(retrievedItem);
         assertEquals(7, retrievedItem.getId());
@@ -97,13 +97,13 @@ public class ItemServiceTest {
 
     @Test
     public void updateItem_givenValidItem_thenSucceed() {
-        Optional<UserEntity> user = Optional.of(UserEntity.builder().id(1L).build());
+        Optional<User> user = Optional.of(User.builder().id(1L).build());
         when(userRepository.findById(Mockito.anyLong())).thenReturn(user);
-        Optional<ItemEntity> item = Optional.of(ItemEntity.builder().id(7L).name("name")
-                .userEntity(UserEntity.builder().id(1L).build()).build());
+        Optional<Item> item = Optional.of(Item.builder().id(7L).name("name")
+                .user(User.builder().id(1L).build()).build());
         when(itemRepository.findById(Mockito.anyLong())).thenReturn(item);
         ItemDtoUpdate itemDtoUpdate = ItemDtoUpdate.builder().id(7L).name("name").build();
-        when(itemRepository.save(Mockito.any(ItemEntity.class))).thenReturn(item.get());
+        when(itemRepository.save(Mockito.any(Item.class))).thenReturn(item.get());
         ItemDto retrievedItem = itemService.updateItem(1L, itemDtoUpdate, Mockito.anyLong());
         assertNotNull(retrievedItem);
         assertEquals(7, retrievedItem.getId());
@@ -112,10 +112,10 @@ public class ItemServiceTest {
 
     @Test
     public void updateItem_givenConflictItemIdAndUserId_thenExceptForbiddenException() {
-        Optional<UserEntity> user = Optional.of(UserEntity.builder().id(1L).build());
+        Optional<User> user = Optional.of(User.builder().id(1L).build());
         when(userRepository.findById(Mockito.anyLong())).thenReturn(user);
-        Optional<ItemEntity> item = Optional.of(ItemEntity.builder().id(7L).name("name")
-                .userEntity(UserEntity.builder().id(2L).build()).build());
+        Optional<Item> item = Optional.of(Item.builder().id(7L).name("name")
+                .user(User.builder().id(2L).build()).build());
         when(itemRepository.findById(Mockito.anyLong())).thenReturn(item);
         ItemDtoUpdate itemDtoUpdate = ItemDtoUpdate.builder().id(7L).name("name").build();
         assertThrows(ForbiddenException.class, () -> itemService.updateItem(1L, itemDtoUpdate, Mockito.anyLong()));
@@ -123,8 +123,8 @@ public class ItemServiceTest {
 
     @Test
     public void updateItem_givenInvalidUserId_thenExceptNotFoundException() {
-        Optional<ItemEntity> item = Optional.of(ItemEntity.builder().id(7L).name("name")
-                .userEntity(UserEntity.builder().id(1L).build()).build());
+        Optional<Item> item = Optional.of(Item.builder().id(7L).name("name")
+                .user(User.builder().id(1L).build()).build());
         when(itemRepository.findById(Mockito.anyLong())).thenReturn(item);
         when(userRepository.findById(Mockito.anyLong())).thenReturn(Optional.empty());
         ItemDtoUpdate itemDtoUpdate = ItemDtoUpdate.builder().id(7L).name("name").build();
@@ -140,8 +140,8 @@ public class ItemServiceTest {
 
     @Test
     public void findByNameOrDescription_thenSucceed() {
-        List<ItemEntity> itemEntities = List.of(
-                ItemEntity.builder().id(10L).name("hammer").available(Boolean.TRUE).build());
+        List<Item> itemEntities = List.of(
+                Item.builder().id(10L).name("hammer").available(Boolean.TRUE).build());
         when(itemRepository.findByNameContainingIgnoreCaseOrDescriptionContainingIgnoreCase(
                 Mockito.anyString(), Mockito.anyString())).thenReturn(itemEntities);
         List<ItemDto> items = itemService.findByNameOrDescription("hammer");
